A5P1: - Labelled the text inputs. - Fixed contrast on the comment text input.

--- a/Assignment 5/Part 1/style.css
+++ b/Assignment 5/Part 1/style.css
@@ -217,14 +217,16 @@ audio {
 }
 
 .comment-form label {
-  align-self: center;
+  align-self: right;
   flex: 2;
   text-align: right;
 }
 
 .comment-form input {
-  margin-left: 1rem;
+  margin-left: 0rem;
   flex: 6;
+  color: black;
+  width: 350px;
 }
 
 .show-hide {
